增加拖动（不完善

--- a/wall.html
+++ b/wall.html
@@ -12,9 +12,17 @@
 <script src="wall.js"></script>
 </head>
 <body>
-
+<img src="img/photo-1.jpg" class="image">
+<img src="img/photo-2.jpg" class="image">
+<img src="img/photo-3.jpg" class="image">
+<img src="img/photo-4.jpg" class="image">
+<img src="img/photo-5.jpg" class="image">
+<img src="img/photo-6.jpg" class="image">
+<div style="background:url(img/photo-6.jpg)" class="image"></div>
 <script>
-
+// $('.image').on("contextmenu", function(e){ return false; }).each(function() {
+    
+// });
 </script>
 </body>
 </html>
