touch加入拖动间隔

--- a/wall.html
+++ b/wall.html
@@ -18,11 +18,11 @@
 <img src="img/photo-4.jpg" class="image">
 <img src="img/photo-5.jpg" class="image">
 <img src="img/photo-6.jpg" class="image">
-<div style="background:url(img/photo-6.jpg)" class="image"></div>
+<!-- <div style="background:url(img/photo-6.jpg)" class="image"></div> -->
 <script>
-// $('.image').on("contextmenu", function(e){ return false; }).each(function() {
+$('.image').on("contextmenu", function(e){ return false; }).each(function() {
     
-// });
+});
 </script>
 </body>
 </html>
