美化显示效果，旋转还需优化

--- a/wall.html
+++ b/wall.html
@@ -12,21 +12,50 @@
 <script src="wall.js"></script>
 </head>
 <body>
-<img src="img/photo-1.jpg" class="image">
-<img src="img/photo-2.jpg" class="image">
-<img src="img/photo-3.jpg" class="image">
-<img src="img/photo-4.jpg" class="image">
-<img src="img/photo-5.jpg" class="image">
-<img src="img/photo-6.jpg" class="image">
-<!-- <div style="background:url(img/photo-6.jpg)" class="image"></div> -->
 <script>
-$('.image').on("contextmenu", function(e){ return false; }).each(function() {
-    var $this = $(this);
-    $this.css({
-        'top': Math.random() * 450,
-        'left': Math.random() * 600
-    });
-});
+var screen = window.screen,
+    sWidth = screen.availWidth,
+    sHeight = screen.availHeight,
+    $body = $('body');
+var photos = [
+    {
+        url: 'img/photo-1.jpg'
+    },
+    {
+        url: 'img/photo-2.jpg'
+    },
+    {
+        url: 'img/photo-3.jpg'
+    },
+    {
+        url: 'img/photo-4.jpg'
+    },
+    {
+        url: 'img/photo-5.jpg'
+    },
+    {
+        url: 'img/photo-6.jpg',
+        label: 'plane'
+    }
+];
+for (var i = 0; i < photos.length; i++) {
+    var photo = photos[i],
+        $photo = $('<div>').addClass('photo'),
+        $frame = $('<div>').addClass('frame').appendTo($photo)
+        $image = $('<img>').addClass('image').appendTo($frame);
+    $image.on("contextmenu", function(e){ return false; })
+        .attr('src', photo.url);
+    $photo.css({
+            'top': Math.random() * sHeight * 0.7,
+            'left': Math.random() * sWidth * 0.7,
+            '-webkit-transform': 'rotate(' + (Math.random() * 50 + Math.random() * -50) + 'deg)',
+            'zIndex': i
+        });
+    if (photo.label) {
+        var $label = $('<div>').addClass('label').text(photo.label).appendTo($frame);
+    }
+    $body.append($photo);
+}
 </script>
 </body>
 </html>
