--- a/wall.html
+++ b/wall.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="wall.css">
 <script src="lib/zepto.js"></script>
 <script src="lib/lang.js"></script>
-<script src="lib/touch.js"></script>
+<script src="lib/gesture.js"></script>
 <script src="wall.js"></script>
 </head>
 <body>
